--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-PORT=
-DB_HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+PORT=8000
+DB_HOST=127.0.0.1
+DB_LOCAL_DBNAME=instock
+DB_LOCAL_USER=
+DB_LOCAL_PASSWORD=
