--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.1"
   }
 }
