--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.1"
